=== gtksourceview 1.3.92 ===

2005-08-08  Paolo Maggi  <paolo@gnome.org>

	* configure.in:
	* README:
	* NEWS: release 1.3.92.

2005-08-19  Dan Damian  <dand@gnome.ro>

	* configure.in: Added "ro" to ALL_LINGUAS.

=== gtksourceview 1.3.91 ===

2005-08-08  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.3.91.

2005-08-08  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/makefile.lang: improvements by
	Ricardo Lenz.

2005-08-04  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourceiter.c
	(pointer_from_offset_skipping_decomp) (g_utf8_strcasestr)
	(g_utf8_strrcasestr) (g_utf8_caselessnmatch)
	(forward_chars_with_skipping) (strbreakup): 
	s/G_NORMALIZE_ALL/G_NORMALIZE_NFD. See bug #303239 for more info.

2005-08-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/makefile.lang: add makefile.lang.

2005-08-03  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #171734: Updated SQL language specification
	
	* gtksourceview/language-specs/sql.lang: updated the gtksourceview SQL 
	language specification so that it covers all the functionality 
	new in Oracle Database 10g Release 1. Improved the handling of 
	top-level SQL statements. 
	Patch by Evert Verhellen <evert.verhellen@advalvas.be>

2005-08-03  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #307456: Multiline string literals in C# break syntax 
	highlighting at end of line
	
	* gtksourceview/language-specs/csharp.lang: added support for @"" 
	strings. Patch by Brion Vibber <brion@pobox.com>

2005-08-03  Paolo Maggi  <paolo@gnome.org>

	Fixe bug #309438: a couple of typos in the .po file
	
	* gtksourceview/gtksourcetag.c (gtk_source_tag_class_init):
	s/associated to/associated with

	* gtksourceview/gtksourceview.c (gtk_source_view_class_init): added
	"non whitespace characters" to clarify

2005-08-03  Paolo Maggi  <paolo@gnome.org>
	
	Fixed bug #310219: RDF files not recognized as XML for syntax coloring
	